--- a/app/views/comment/index.html.erb
+++ b/app/views/comment/index.html.erb
@@ -7,16 +7,16 @@
       <% @note_info.each do |note_info| %>
 
           <div class="note_fram">
-            <div class="comment_user_info" onclick="get_user_id('<%= note_info[2].name %>')">
+            <div class="comment_user_info">
               <img src="<%= note_info[2].user_image %>">
               <span><%= note_info[2].name %></span>
               <br>
               <span><%= note_info[2].created_at.to_s.slice(5,11) %></span>
             </div>
 
-            <div class="comment_note_info" onclick="get_note_id(<%= note_info[1].id %>)">
+            <div class="comment_note_info">
               <img src="<%= note_info[1].note_photo %>">
-              <%= note_info[1].user_id %>: <span><%= note_info[1].content %></span>
+              <%= note_info[1].user_id %>: <span><%= note_info[1].content.length > 10 ? note_info[1].content.slice(0,10) +'......' : note_info[1].content %></span>
             </div>
             <div onclick="show_comment(<%= note_info[0].id %>)" style="margin: 10px 20px;text-align: left" class="margin-right-20">
               <%= image_tag "reply",:class => 'icon' %>
