--- a/app/views/comment/index.html.erb
+++ b/app/views/comment/index.html.erb
@@ -7,14 +7,14 @@
       <% @note_info.each do |note_info| %>
 
           <div class="note_fram">
-            <div class="comment_user_info">
+            <div class="comment_user_info" onclick="jump_page('/get_user?user_name=<%= note_info[2].name %>')">
               <img src="<%= note_info[2].user_image %>">
               <span><%= note_info[2].name %></span>
               <br>
               <span><%= note_info[2].created_at.to_s.slice(5,11) %></span>
             </div>
 
-            <div class="comment_note_info">
+            <div class="comment_note_info" onclick="jump_page('/note_info/get_note?note_id=<%= note_info[1].id %>')">
               <img src="<%= note_info[1].note_photo %>">
               <%= note_info[1].user_id %>: <span><%= note_info[1].content.length > 10 ? note_info[1].content.slice(0,10) +'......' : note_info[1].content %></span>
             </div>
