--- a/app/views/laud/index.html.erb
+++ b/app/views/laud/index.html.erb
@@ -7,14 +7,14 @@
   <div class="currency_frame">
     <% @laud_info.each_with_index do |laud_info,index| %>
         <div class="note_fram" style="color: #ffffff;">
-          <div class="comment_user_info">
+          <div class="comment_user_info" onclick="jump_page('/get_user?user_name=<%= laud_info[1].name %>')">
             <img src="<%= laud_info[1].user_image %>">
             <span><%= laud_info[1].name %></span> 攒了
             <br>
             <span><%= laud_info[1].created_at.to_s.slice(5,11) %></span>
           </div>
 
-          <div class="comment_note_info">
+          <div class="comment_note_info" onclick="jump_page('/note_info/get_note?note_id=<%= laud_info[0].id %>')">
             <img src="<%= laud_info[0].note_photo %>">
             <%= laud_info[0].user_id %>: <span><%= laud_info[0].content.length > 10 ? laud_info[0].content.slice(0,10) +'......' : laud_info[0].content %></span>
           </div>
