--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,7 +14,7 @@
     <% end %>
     <% @get_notes.each do |get_note| %>
         <div class="note_fram">
-          <div class="head_info_fram" onclick="get_user_id('<%= get_note[1].name %>')">
+          <div class="head_info_fram" onclick="jump_page('/get_user?user_name=<%= get_note[1].name %>')">
             <img src="<%= get_note[1].user_image %>" class="head_image">
             <div>
               <span class="left"><%= get_note[1].name %></span>
@@ -26,7 +26,7 @@
               <span class="left"><%= get_note[0].created_at.to_s.slice(5,11) %></span>
             </div>
           </div>
-          <div onclick="get_note_id(<%= get_note[0].id %>)">
+          <div onclick="jump_page('/note_info/get_note?note_id=<%= get_note[0].id %>')">
             <p class="note_content"><%= get_note[0].content %></p>
             <img class="note_image " src="<%= get_note[0].note_photo %>">
           </div>
