修改小问题

--- a/app/views/land/register.html.erb
+++ b/app/views/land/register.html.erb
@@ -24,7 +24,7 @@
     </div>
     <div class="reginster_input">
       <button id="submit" onclick="save_user_info()">确认注册</button>
-      <button onclick="jump_page('/')">取消</button>
+      <button onclick="cancel_register()">取消</button>
     </div>
   </div>
 </div>
