--- a/app/assets/stylesheets/note_info/note_info.css
+++ b/app/assets/stylesheets/note_info/note_info.css
@@ -78,3 +78,12 @@
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.edit_note_fram div div{
+    float: right;
+}
+
+.edit_note_fram input{
+    width: 260px;
+    margin: 10px 20px;
+}
