--- a/app/views/user_information/_admin_head.html.erb
+++ b/app/views/user_information/_admin_head.html.erb
@@ -1,6 +1,6 @@
 <div class="head_tag">
   <div class="head_left">
-    <button class="head_button" onclick="jump_page('/user_information/get_all_user')">用户管理</button>
-    <button class="head_button" onclick="jump_page('/note_info/index')">帖子管理</button>
+    <button class="head_button" onclick="jump_page('/user_information/get_all_user?page=1')">用户管理</button>
+    <button class="head_button" onclick="jump_page('/note_info/index?page=1')">帖子管理</button>
   </div>
 </div>
