修改管理员head，添加对cookie乱码问题

--- a/app/views/user_information/_admin_head.html.erb
+++ b/app/views/user_information/_admin_head.html.erb
@@ -3,4 +3,7 @@
     <button class="head_button" onclick="jump_page('/user_information/get_all_user?page=1')">用户管理</button>
     <button class="head_button" onclick="jump_page('/note_info/index?page=1')">帖子管理</button>
   </div>
+  <div class="head_right">
+    <button class="head_button" onclick="jump_page('/')">切换用户</button>
+  </div>
 </div>
